--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,3 @@
-context.name = ASDF
+env.name = DOK
 
-pt.log.root=C:/Project-LCM/logs
-
-jms.rabbitmq.host=27.122.227.161
-jms.rabbitmq.port=44471
-jms.rabbitmq.username=openstack
-jms.rabbitmq.password=!cloud01
-jms.rabbitmq.vhost=/openstack
+logback.log=C:/Temp/logs
