--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,30 @@
 		    <version>2.9.9</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/io.netty/netty -->
+		<!--dependency>
+		    <groupId>io.netty</groupId>
+		    <artifactId>netty</artifactId>
+		    <version>3.10.6.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-common</artifactId>
+			<version>4.1.43.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-codec</artifactId>
+			<version>4.1.43.Final</version>
+		</dependency-->
+		
+
+		<dependency>
+		    <groupId>io.netty</groupId>
+		    <artifactId>netty-all</artifactId>
+		    <version>4.1.43.Final</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
